--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -23,10 +23,12 @@
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
+
+    <!-- 'client_id': '802ac3d9-ee81-4281-9ada-d334fdde10cf' -->
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '802ac3d9-ee81-4281-9ada-d334fdde10cf',
+        'client_id': '06ad70d1-0ea3-42fa-b01a-c8e7e524255d',
         'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
       });
     </script>
